# marlin-cmake

CMakelists/MarlinBuildroot/: CMakeLists.txt
CMakelists/MarlinRootDir/: CMakeLists.txt
CMakelists/MarlinSrcDir/: CMakeLists.txt
Platform/: Arduino.cmake
modules/: Arduino_SDK.cmake  marlin_cmake_functions.cmake
toolchain/: ArduinoToolchain.cmake
